tools/tests/errors/surf_lib_07.ki
# Backreferences would break the linear-time guarantee and are rejected.
var r = import("regex")
discard r.compile("(a)\\1")
